# docking-sim

./: README.md
install/telemetry_bridge/include/telemetry_bridge/msg/: latency_stats.h  rosidl_generator_cpp__visibility_control.hpp  telemetry_state.h
install/telemetry_bridge/include/telemetry_bridge/msg/detail/: latency_stats__functions.c  latency_stats__rosidl_typesupport_fastrtps_c.h  latency_stats__struct.hpp  latency_stats__type_support.cpp  latency_stats__type_support.h  telemetry_state__builder.hpp  telemetry_state__rosidl_typesupport_fastrtps_cpp.hpp  telemetry_state__rosidl_typesupport_introspection_c.h  telemetry_state__struct.h  telemetry_state__traits.hpp  telemetry_state__type_support.h
install/telemetry_bridge/lib/telemetry_bridge/: udp_bridge
install/telemetry_bridge/share/ament_index/resource_index/package_run_dependencies/: telemetry_bridge
install/telemetry_bridge/share/telemetry_bridge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/telemetry_bridge/share/telemetry_bridge/cmake/: telemetry_bridgeConfig.cmake  telemetry_bridge__rosidl_generator_cExport-noconfig.cmake  telemetry_bridge__rosidl_generator_cppExport.cmake  telemetry_bridge__rosidl_typesupport_cExport-noconfig.cmake  telemetry_bridge__rosidl_typesupport_cExport.cmake  telemetry_bridge__rosidl_typesupport_cppExport.cmake  telemetry_bridge__rosidl_typesupport_introspection_cExport-noconfig.cmake  telemetry_bridge__rosidl_typesupport_introspection_cExport.cmake  telemetry_bridge__rosidl_typesupport_introspection_cppExport-noconfig.cmake
log/: latest_build  latest_test  latest_test-result
scripts/: build.sh  run.sh  start.sh
src/: StateMonitorNode.cpp  UdpBridgeNode.cpp  main.cpp
src/include/sim_clock/: SimClockNode.hpp
src/include/telemetry_bridge/: StateMonitorNode.hpp  UdpBridgeNode.hpp
src/launch/: bridge_launch.py
src/sim_clock/src/: SimClockNode.cpp  main.cpp
src/spacecraft_tf/: CMakeLists.txt  package.xml
src/spacecraft_tf/config/: tf_params.yaml
src/spacecraft_tf/include/spacecraft_tf/: SpacecraftTfNode.hpp
src/spacecraft_tf/src/: SpacecraftTfNode.cpp  main.cpp
src/telemetry_bridge/: CMakeLists.txt
src/tests/: monitor_test.cpp
src/thruster_control/: CMakeLists.txt  package.xml
src/thruster_control/config/: thruster_mix.yaml
src/thruster_control/include/: ThrusterControlNode.hpp
src/thruster_control/msg/: ThrusterCommand.msg
src/thruster_control/src/: ThrusterControlNode.cpp  main.cpp
(+1 files in other folders)
